--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="col-md-8">
                 <div class="com-info">
                     <h1 class="main-heading">Mondal Food Products</h1>
+                    <img class="founder only-mobile" src="assets/img/founder-imagge.png">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -38,7 +39,7 @@
 
             </div>
             <div class="col-md-4" style="text-align: center;">
-                <img class="founder" src="assets/img/founder-imagge.png">
+                <img class="founder only-desktop" src="assets/img/founder-imagge.png">
             </div>
         </div>
     </div>
