floting contact button added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="contenthead">
         <h1 class="site-title" data-text="Mondal Food Products">Mondal Food Products</h1>
     </div>
-    <div class="content">
+    <div class="content only-mobile">
         <button id="myBtn" onclick="myFunction()">Pause</button>
     </div>
     <!-- Video Header End -->
@@ -34,7 +34,7 @@
 
                     </p>
                     <h5>Founder Of Mondal Food Products</h5>
-                    <h5>Jahid Mondal</h5>
+                    <h5>Sahid Mondal</h5>
                 </div>
 
             </div>
@@ -113,10 +113,24 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <div class="phone-call cbh-phone cbh-green cbh-show  cbh-static" id="clbh_phone_div" style="position: fixed; bottom: -30px; left: -35px; z-index: 80;">
+        <a id="WhatsApp-button" href="tel:+6494461709" target="_blank" class="phoneJs" title="Mesaj Gönder!" rel="noopener noreferrer">
+            <div class="cbh-ph-circle"></div>
+            <div class="cbh-ph-circle-fill"></div>
+            <div class="cbh-ph-img-circle1"></div>
+        </a>
+    </div>
+    <div class="whats-float">
+        <a href="javascript:void(0);">
+            <i class="fab fa-whatsapp "></i><a href="https://api.whatsapp.com/send?phone=+91 8013684727"><span>WhatsApp<br><small>+91 8013684727</small></span></a>
+        </a>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
+    <script src="assets/js/custom.js "></script>
 </body>
 
 </html>
